--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 										<!-- Feature -->
 											<section>
-												<a href="Designgráfico.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+												<a href="Designgráfico.html" class="image featured"><img src="images/pic40.jpg" alt="" /></a>
 												<header>
 													<h3>Design Gráfico</h3>
 												</header>
@@ -147,7 +147,7 @@
 
 											<!-- Feature -->
 												<section>
-													<a href="Designdeproduto.html" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+													<a href="Designdeproduto.html" class="image featured"><img src="images/pic09_1.jpg" alt="" /></a>
 													<header>
 														<h3>Design de Produto</h3>
 													</header>
