--- a/Escultura.html
+++ b/Escultura.html
@@ -95,12 +95,25 @@
 												</section>
 												</div>
 												<!-- Feature -->
+												<div>
 												<section>
 													<a href="" class="image featured"><img src="images/pic28_1.jpg" alt="" /></a>
 												</section>
 												</div>
+												<!-- Feature -->
 
 
+												<div>
+												<section>
+													<a href="" class="image featured"><img src="images/pic28_2.jpg" alt="" /></a>
+												</section>
+											</div>
+												<!-- Feature -->
+                         <div>
+												<section>
+													<a href="" class="image featured"><img src="images/pic28_3.jpg" alt="" /></a>
+												</section>
+												</div>
 
 							    <article>
 									<h3>Projetos de Escultura</h3>
