--- a/Representaçãodigital.html
+++ b/Representaçãodigital.html
@@ -97,7 +97,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 										<!-- Feature -->
 											<section>
-											<a href="" class="image featured"><img src="images/pic39_4.jpg" alt="" /></a>
+											<a href="" Sclass="image featured"><img src="images/pic39_4.jpg" alt="" /></a>
 											</section>
 											</div>
 
@@ -105,8 +105,8 @@
 											<video controls src="images/projeto3.mp4" poster="images/previewrepdig.png" preload="none" width="640" height="360"> </video>
 											</section>
 
-											</section>
-											</div>
+										</section>
+									</div>
 
 
 
