--- a/Representaçãodigital.html
+++ b/Representaçãodigital.html
@@ -100,7 +100,7 @@
 											<a href="" Sclass="image featured"><img src="images/pic39_4.jpg" alt="" /></a>
 											</section>
 											</div>
-
+<div class="col-4 col-6-medium col-12-small">
 											<section>
 											<video controls src="images/projeto3.mp4" poster="images/previewrepdig.png" preload="none" width="640" height="360"> </video>
 											</section>
