--- a/Representaçãodigital.html
+++ b/Representaçãodigital.html
@@ -110,7 +110,7 @@
 									</div>
 
 
-
+                    								<div class="row aln-center">
 							    	              <article>
 											<h3>Projetos de Representação Digital </h3>
 											<p> Resultado de vários projetos para as unidades curriculares de Ferramentas e Técnicas de Representação e Representação Digital.
