--- a/Representaçãodigital.html
+++ b/Representaçãodigital.html
@@ -94,7 +94,12 @@
 			 								</section>
 			 								</div>
 
-											
+											<div class="col-4 col-6-medium col-12-small">
+			 								<!-- Feature -->
+			 								<section>
+			 									<a href="" class="image featured"><img src="images/pic39_4.jpg" alt="" /></a>
+			 								</section>
+			 								</div>
 											
                                                                                 <div class="col-4 col-6-medium col-12-small">
 											<section>
