--- a/Escultura.html
+++ b/Escultura.html
@@ -89,6 +89,31 @@
 
 												<div class="col-4 col-6-medium col-12-small">
 
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic28.jpg" alt="" /></a>
+												</section>
+												</div>
+												<!-- Feature -->
+												<div>
+												<section>
+													<a href="" class="image featured"><img src="images/pic28_1.jpg" alt="" /></a>
+												</section>
+												</div>
+												<!-- Feature -->
+
+
+												<div>
+												<section>
+												<a href="" class="image featured"><img src="images/pic28_2.jpg" alt="" /></a>
+												</section>
+											        </div>
+												<!-- Feature -->
+                                                                                                    <div>
+												<section>
+													<a href="" class="image featured"><img src="images/pic28_3.jpg" alt="" /></a>
+												</section>
+												</div>
 
 							    <article>
 									<h3>Projetos de Escultura</h3>
